--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,20 @@
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^7.3.6",
         "@mui/material": "^7.3.6",
+        "@react-three/drei": "^9.99.0",
+        "@react-three/fiber": "^8.15.17",
+        "@tanstack/react-query": "^5.24.2",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.7",
-        "framer-motion": "^12.23.26",
+        "framer-motion": "^11.2.6",
+        "postcss": "^8.4.35",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
-        "react-router-dom": "^6.30.2"
+        "react-router-dom": "^6.30.2",
+        "tailwindcss": "^3.4.4",
+        "three": "^0.162.0",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.56",
