--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
